--- a/templates/home.html
+++ b/templates/home.html
@@ -34,6 +34,7 @@
   <title>Optinode</title>
 </head>
 <body>
+  {% include 'nav.html' %}
 
   <!-- Main Content Area -->
   <div class="container py-5">
