--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Our Projects</a>
+          <a class="nav-link" href="{{ url_for('pricing') }}">Our Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </li>
       </ul>
     </div>
