--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <style>
     /* Custom styles for smooth appearance */
     #banner {
@@ -44,6 +44,7 @@
   <title>Optinode</title>
 </head>
 <body>
+  <!-- Include navigation -->
   {% include 'nav.html' %}
 
   <!-- Main Content Area -->
@@ -76,8 +77,7 @@
   </footer>
 
   <!-- Bootstrap JS (optional) -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybge1NXg7gpP9Gp+YYM9+xtad3uL06f3GbhExW4QEvJdg4i1D" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0pFqK68PGRM6zNhYO9enTfN22fI4p1Dk/d5UV7gd/BMDl5nK" crossorigin="anonymous"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
