--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <!-- navbar.html -->
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #007bff;">
   <div class="container">
-    <a class="navbar-brand" href="#">Optinode</a>
+    <a class="navbar-brand" href="#">Smart Movers</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,10 +11,7 @@
           <a class="nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('pricing') }}">Our Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+          <a class="nav-link" href="{{ url_for('contact') }}">Get a Quote</a>
         </li>
       </ul>
     </div>
