--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,6 +11,9 @@
           <a class="nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('our_services') }}">Our Services</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ url_for('contact') }}">Get a Quote</a>
         </li>
       </ul>
