--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
       <div class="col-12 col-md-8 text-center">
         <h1 class="display-3 text-primary font-weight-bold mb-3">Smart Movers</h1>
         <h2 class="h4 text-secondary mb-4">"Affordable, Reliable, and Seamless Moving Services"</h2>
-        <img id="banner" src="https://c1019991-d321-4ebb-9881-8545cfa589bc-00-2fczmisw9pof8.janeway.replit.dev/static/adrianjosh.jpeg" alt="Smart Movers Banner" class="img-fluid rounded mb-4">
+        <img id="banner" src="https://c1019991-d321-4ebb-9881-8545cfa589bc-00-2fczmisw9pof8.janeway.replit.dev/static/intro.jpg" alt="Smart Movers Banner" class="img-fluid rounded mb-4">
       </div>
 
       <!-- About Us Section -->
